--- a/schedule.html
+++ b/schedule.html
@@ -1,114 +1,62 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tennessee — Schedule & Results</title>
-  <meta name="description" content="Tennessee Volunteers football schedule and results." />
-  <link rel="icon" href="assets/img/tn-badge.svg" />
-  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30" />
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Schedule • Tennessee Gameday Hub</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <script defer src="assets/js/app.js"></script>
 </head>
-<body class="page page-schedule">
-
-  <!-- Header -->
+<body class="page schedule-page">
   <header class="site-header">
-    <div class="wrap">
-      <a class="brand" href="index.html" aria-label="Tennessee home">
-        <span class="brand-badge">TN</span><span class="brand-wordmark">Tennessee</span>
-      </a>
-      <nav class="top-nav" aria-label="Primary">
-        <a class="active" href="schedule.html">Schedule</a>
-        <a href="specials.html">Specials</a>
-        <a href="map.html">Map</a>
-        <a href="guide.html">Guide</a>
-      </nav>
-      <div id="countdown" class="countdown-header" aria-live="polite">
-        <div class="pill"><b id="cd-days">00</b><span>days</span></div>
-        <div class="pill"><b id="cd-hrs">00</b><span>hrs</span></div>
-        <div class="pill"><b id="cd-min">00</b><span>mins</span></div>
-        <div class="pill"><b id="cd-sec">00</b><span>secs</span></div>
+    <div class="bar container">
+      <a class="brand" href="index.html"><span class="logo">TN</span><span>Tennessee</span></a>
+      <div id="countdown">
+        <div class="cd-badge"><span id="cd-days">00</span><span class="cd-label">days</span></div>
+        <div class="cd-badge"><span id="cd-hrs">00</span><span class="cd-label">hrs</span></div>
+        <div class="cd-badge"><span id="cd-min">00</span><span class="cd-label">mins</span></div>
+        <div class="cd-badge"><span id="cd-sec">00</span><span class="cd-label">secs</span></div>
       </div>
-      <a class="btn btn-small btn-accent" href="submit.html">Submit</a>
+      <nav class="site-nav">
+        <a href="schedule.html">Schedule</a><a href="specials.html">Specials</a><a href="map.html">Map</a><a href="guide.html">Guide</a>
+        <a class="btn" href="submit.html">Submit</a>
+      </nav>
     </div>
   </header>
 
-  <main class="wrap main-grid">
-    <div class="grid grid-rail">
-
-      <!-- Main column -->
-      <div class="col-main flow">
-        <section class="card">
-          <header class="card-header">
-            <h1 class="h3">Schedule & Results</h1>
-            <small id="last-updated" class="muted">Data updated — loading…</small>
-          </header>
-          <div class="card-body">
-            <div class="table-scroll">
-              <table id="sched" class="table">
-                <thead>
-                  <tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr>
-                </thead>
-                <tbody><!-- filled by app.js --></tbody>
-              </table>
-            </div>
-            <div class="mt-2">
-              <button id="toggle-full" class="btn btn-small">Show full schedule</button>
-            </div>
-            <p class="muted mt-2">Times/TV subject to change. Check official sources day-of.</p>
-          </div>
-        </section>
-      </div>
-
-      <!-- Right rail -->
-      <aside class="col-rail flow">
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Quick links</h2></header>
-          <ul class="card-list">
-            <li><a href="guide.html">Guide</a></li>
-            <li><a href="specials.html">Specials</a></li>
-            <li><a href="map.html">Map</a></li>
-            <li><a href="submit.html">Submit a listing</a></li>
-          </ul>
-        </section>
-
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Live Traffic (Neyland)</h2></header>
-          <div class="card-body">
-            <div class="embed-frame">
-              <iframe title="Waze live map"
-                src="https://embed.waze.com/iframe?zoom=14&lat=35.9549&lon=-83.9250&pin=1"
-                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-            <small class="muted">Data: Waze Live Map</small>
-          </div>
-        </section>
-
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Mini map</h2></header>
-          <div class="card-body">
-            <div class="embed-frame">
-              <iframe title="Campus mini map"
-                src="https://www.openstreetmap.org/export/embed.html?bbox=-83.940%2C35.944%2C-83.910%2C35.964&layer=mapnik&marker=35.955%2C-83.925"
-                loading="lazy"></iframe>
-            </div>
-            <small><a target="_blank" rel="noopener" href="https://www.openstreetmap.org/#map=15/35.955/-83.925">Open full map</a></small>
-          </div>
-        </section>
-      </aside>
-
+  <main class="container rail-layout">
+    <div class="content stack">
+      <section class="card">
+        <div class="kv">
+          <h2>Full Schedule</h2>
+          <span class="meta" id="data-updated">Data updated — Loading…</span>
+        </div>
+        <table class="table" id="sched">
+          <thead><tr><th>Date</th><th>Opponent</th><th>H/A</th><th>TV</th><th>Result</th></tr></thead>
+          <tbody id="sched-body"><tr><td colspan="5" class="meta">Loading…</td></tr></tbody>
+        </table>
+        <p class="meta">Times/TV subject to change. Check official sources day-of.</p>
+      </section>
     </div>
+
+    <aside class="rail stack">
+      <section class="card">
+        <h2>Quick links</h2>
+        <ul class="meta" style="margin:0; padding-left:1rem">
+          <li><a href="guide.html">Guide</a></li>
+          <li><a href="specials.html">Specials</a></li>
+          <li><a href="map.html">Map</a></li>
+          <li><a href="submit.html">Submit a listing</a></li>
+        </ul>
+      </section>
+      <section class="card">
+        <h2>Live traffic (Waze)</h2>
+        <iframe class="embed map" src="https://embed.waze.com/iframe?lat=35.9545&lon=-83.9250&zoom=14&pin=1"></iframe>
+      </section>
+    </aside>
   </main>
 
-  <footer class="site-footer">
-    <div class="wrap">
-      <p class="muted">Unofficial fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
-      <nav class="foot-nav">
-        <a href="guide.html">Guide</a> · <a href="specials.html">Specials</a> · <a href="map.html">Map</a> · <a href="schedule.html">Schedule</a> · <a href="submit.html">Submit</a>
-      </nav>
-    </div>
-  </footer>
-
-  <script src="assets/js/app.js?v=2025-08-30"></script>
-  <script src="assets/js/live.js?v=2025-08-30"></script>
+  <footer class="site-footer"><div class="container">
+    <p class="meta">Unofficial fan resource.</p>
+  </div></footer>
 </body>
 </html>
