--- a/guide.html
+++ b/guide.html
@@ -1,198 +1,98 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tennessee — Gameday Guide</title>
-  <meta name="description" content="Everything you need for game day in Knoxville — before, during, and after kickoff." />
-  <link rel="icon" href="assets/img/tn-badge.svg" />
-  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30" />
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Guide • Tennessee Gameday Hub</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <script defer src="assets/js/app.js"></script>
 </head>
-<body class="page page-guide">
-
+<body class="page guide-page">
   <header class="site-header">
-    <div class="wrap">
-      <a class="brand" href="index.html" aria-label="Tennessee home">
-        <span class="brand-badge">TN</span><span class="brand-wordmark">Tennessee</span>
-      </a>
-      <nav class="top-nav" aria-label="Primary">
-        <a href="schedule.html">Schedule</a>
-        <a href="specials.html">Specials</a>
-        <a href="map.html">Map</a>
-        <a class="active" href="guide.html">Guide</a>
-      </nav>
-      <div id="countdown" class="countdown-header" aria-live="polite">
-        <div class="pill"><b id="cd-days">00</b><span>days</span></div>
-        <div class="pill"><b id="cd-hrs">00</b><span>hrs</span></div>
-        <div class="pill"><b id="cd-min">00</b><span>mins</span></div>
-        <div class="pill"><b id="cd-sec">00</b><span>secs</span></div>
+    <div class="bar container">
+      <a class="brand" href="index.html"><span class="logo">TN</span><span>Tennessee</span></a>
+      <div id="countdown">
+        <div class="cd-badge"><span id="cd-days">00</span><span class="cd-label">days</span></div>
+        <div class="cd-badge"><span id="cd-hrs">00</span><span class="cd-label">hrs</span></div>
+        <div class="cd-badge"><span id="cd-min">00</span><span class="cd-label">mins</span></div>
+        <div class="cd-badge"><span id="cd-sec">00</span><span class="cd-label">secs</span></div>
       </div>
-      <a class="btn btn-small btn-accent" href="submit.html">Submit</a>
+      <nav class="site-nav">
+        <a href="schedule.html">Schedule</a><a href="specials.html">Specials</a><a href="map.html">Map</a><a href="guide.html">Guide</a>
+        <a class="btn" href="submit.html">Submit</a>
+      </nav>
     </div>
   </header>
 
-  <main class="wrap main-grid">
-    <div class="grid grid-rail">
-      <div class="col-main flow">
+  <main class="container rail-layout">
+    <div class="content stack">
+      <section class="card">
+        <h2>Gameday Guide</h2>
+        <p class="meta">Everything you need for game weekend in Knoxville—before, during, and after kickoff.</p>
+      </section>
 
-        <section class="card">
-          <header class="card-header">
-            <h1 class="h3">Gameday Guide</h1>
-            <div class="chipset">
-              <a class="chip" href="#pre">Pre-game</a>
-              <a class="chip" href="#game">Game-time</a>
-              <a class="chip" href="#post">Post-game</a>
-            </div>
-          </header>
-        </section>
-
-        <!-- Pre-game -->
-        <section id="pre" class="card">
-          <header class="card-header"><h2 class="h4">Pre-game</h2></header>
-          <div class="card-body flow">
-            <p><strong>Book early, plan early.</strong> Knoxville and nearby cities sell out fast on home weekends. Always make a Plan B in surrounding towns.</p>
-
-            <details open>
-              <summary class="h6">Where to stay</summary>
-              <div class="stack-md">
-                <div>
-                  <h3 class="h6">Hotels & Motels</h3>
-                  <ul class="bullets">
-                    <li>Downtown & campus hotels fill first; expand search to West Knoxville, Oak Ridge, Farragut, Sevierville, Alcoa/Maryville.</li>
-                    <li>Expect 2-night minimums and higher rates for big opponents.</li>
-                  </ul>
-                </div>
-                <div>
-                  <h3 class="h6">Vacation rentals</h3>
-                  <ul class="bullets">
-                    <li>Airbnb/VRBO go fast—book early and verify parking rules.</li>
-                  </ul>
-                </div>
-                <div>
-                  <h3 class="h6">Campgrounds / RV</h3>
-                  <ul class="bullets">
-                    <li>Look outside Knoxville for availability; confirm hookups and game-day access windows.</li>
-                  </ul>
-                </div>
-                <div>
-                  <h3 class="h6">Plan B towns</h3>
-                  <p class="muted">Oak Ridge • Sevierville • Pigeon Forge • Gatlinburg • Lenoir City • Loudon • Clinton • Morristown • Jefferson City • Dandridge • Newport • Greeneville • Bristol (tri-cities)</p>
-                </div>
-              </div>
-            </details>
-
-            <details>
-              <summary class="h6">Getting here & parking</summary>
-              <ul class="bullets">
-                <li>Arrive on campus <strong>3–4 hours pre-kick</strong> for big games.</li>
-                <li>Use the live traffic and “mini map” in the right rail to pick faster routes.</li>
-                <li>Rideshare: agree on pickup point away from closures before the game.</li>
-              </ul>
-            </details>
-
-            <details>
-              <summary class="h6">Pack list (go-bag)</summary>
-              <ul class="bullets two-col">
-                <li>Mobile tickets (screen brightness up)</li><li>Clear bag or small clutch</li>
-                <li>Refillable water bottle (if allowed)</li><li>Portable phone charger</li>
-                <li>Rain layer / poncho</li><li>Hat / sunscreen</li>
-                <li>Ear protection for kids</li><li>Cashless payment ready</li>
-                <li>Printed directions as backup</li><li>Small first-aid kit & meds</li>
-              </ul>
-            </details>
-
-            <details>
-              <summary class="h6">With kids</summary>
-              <ul class="bullets">
-                <li>Family restrooms and changing tables available—ask nearest staff.</li>
-                <li>Pack wipes and noise protection; halftime can be busy.</li>
-              </ul>
-            </details>
-          </div>
-        </section>
-
-        <!-- Game-time -->
-        <section id="game" class="card">
-          <header class="card-header"><h2 class="h4">Game-time</h2></header>
-          <div class="card-body flow">
-            <ul class="bullets">
-              <li>Hydration: refill stations at main concourses.</li>
-              <li>Night games get breezy—bring a layer.</li>
-              <li>Mobile tickets: open before scanners to avoid bottlenecks.</li>
-              <li>Concessions: grab at end of quarter to beat lines.</li>
-            </ul>
-            <div class="note">
-              Check our Live Score Box on the home page for in-game updates.
-            </div>
-          </div>
-        </section>
-
-        <!-- Post-game -->
-        <section id="post" class="card">
-          <header class="card-header"><h2 class="h4">Post-game</h2></header>
-          <div class="card-body flow">
-            <ul class="bullets">
-              <li>Wait 20–30 minutes if parked close—saves time overall.</li>
-              <li>Use side streets or river route when open to beat main flow.</li>
-              <li>Walk outside control points before calling rideshare.</li>
-            </ul>
-            <h3 class="h6 mt-2">24/7 food options</h3>
-            <p class="muted">We’ll curate a late-night list; submit suggestions on the listings page.</p>
-          </div>
-        </section>
-
-      </div>
-
-      <!-- Right rail -->
-      <aside class="col-rail flow">
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Weather now</h2></header>
-          <div id="wx-now" class="card-body">
-            <div class="wx-row"><b id="wx-temp">--</b> <span class="muted">Feels:</span> <span id="wx-feels">--</span></div>
-            <div class="muted small">Wind <span id="wx-wind">--</span> • <span id="wx-city">Knoxville</span></div>
-            <small class="muted">Stadium: <span id="wx-stadium-time">--</span></small>
-          </div>
-        </section>
-
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Traffic & Map</h2></header>
-          <div class="card-body">
-            <div class="embed-frame mb-2">
-              <iframe title="Waze live map"
-                src="https://embed.waze.com/iframe?zoom=14&lat=35.9549&lon=-83.9250&pin=1"
-                loading="lazy"></iframe>
-            </div>
-            <div class="embed-frame">
-              <iframe title="Campus mini map"
-                src="https://www.openstreetmap.org/export/embed.html?bbox=-83.940%2C35.944%2C-83.910%2C35.964&layer=mapnik&marker=35.955%2C-83.925"
-                loading="lazy"></iframe>
-            </div>
-          </div>
-        </section>
-
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Quick links</h2></header>
-          <ul class="card-list">
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="specials.html">Specials</a></li>
-            <li><a href="map.html">Map</a></li>
-            <li><a href="submit.html">Submit a listing</a></li>
+      <div class="grid cards-3">
+        <section class="card" id="pre">
+          <h3>Pre-game</h3>
+          <ul class="meta" style="margin:0; padding-left:1rem">
+            <li><b>Book early.</b> Hotels & rentals sell out. Make a Plan B in nearby towns.</li>
+            <li><b>Where to stay.</b> Downtown & campus first; also West Knoxville, Cedar Bluff, Farragut, Alcoa/Maryville.</li>
+            <li><b>Plan B towns.</b> Oak Ridge, Sevierville, Pigeon Forge, Lenoir City, Clinton, Maryville, Jefferson City, Dandridge, Newport.</li>
+            <li><b>Traffic.</b> Check the live map and Waze before you move.</li>
+            <li><b>Pack list.</b> IDs, mobile tickets, chargers, meds, water, ponchos, sunscreen, snacks.</li>
           </ul>
         </section>
-      </aside>
+
+        <section class="card" id="game">
+          <h3>Game-time</h3>
+          <ul class="meta" style="margin:0; padding-left:1rem">
+            <li>Hydration: refill stations at main concourses.</li>
+            <li>Night games can get breezy—layer up.</li>
+            <li>Mobile tickets: open the wallet before the scanners to avoid bottlenecks.</li>
+            <li>Watch our Live Score Box on the home page for in-game updates.</li>
+          </ul>
+        </section>
+
+        <section class="card" id="post">
+          <h3>Post-game</h3>
+          <ul class="meta" style="margin:0; padding-left:1rem">
+            <li>Wait 20–30 minutes if parked close—saves time overall.</li>
+            <li>Use side streets or river route when open to beat main flow.</li>
+            <li>Walk outside control points before calling rideshare.</li>
+            <li>24/7 food: we’ll curate a list; submit spots on the listings page.</li>
+          </ul>
+        </section>
+      </div>
+
+      <section class="card">
+        <h3>Emergency & Visitor Info</h3>
+        <ul class="meta" style="margin:0; padding-left:1rem">
+          <li>Emergency: 911 — UT Police: (865) 974-3111 — City non-emergency: (865) 215-7450.</li>
+          <li>First-aid stations located on main concourses; look for posted signs.</li>
+          <li>Accessibility: elevators & accessible routes are signed; staff can guide you.</li>
+        </ul>
+      </section>
     </div>
+
+    <aside class="rail stack">
+      <section class="card"><h3>Weather now</h3><div id="wx-now" class="meta">—</div></section>
+      <section class="card">
+        <h3>Traffic & Map</h3>
+        <iframe class="embed map" src="https://embed.waze.com/iframe?lat=35.9545&lon=-83.9250&zoom=14&pin=1"></iframe>
+      </section>
+      <section class="card">
+        <h3>Quick links</h3>
+        <ul class="meta" style="margin:0; padding-left:1rem">
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="map.html">Map</a></li>
+          <li><a href="specials.html">Specials</a></li>
+          <li><a href="submit.html">Submit a listing</a></li>
+        </ul>
+      </section>
+    </aside>
   </main>
 
-  <footer class="site-footer">
-    <div class="wrap">
-      <p class="muted">Unofficial fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
-      <nav class="foot-nav">
-        <a href="guide.html">Guide</a> · <a href="specials.html">Specials</a> · <a href="map.html">Map</a> · <a href="schedule.html">Schedule</a> · <a href="submit.html">Submit</a>
-      </nav>
-    </div>
-  </footer>
-
-  <script src="assets/js/app.js?v=2025-08-30"></script>
-  <script src="assets/js/live.js?v=2025-08-30"></script>
+  <footer class="site-footer"><div class="container">
+    <p class="meta">Unofficial fan resource.</p>
+  </div></footer>
 </body>
 </html>
