--- a/map.html
+++ b/map.html
@@ -1,87 +1,52 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tennessee — Map</title>
-  <meta name="description" content="Interactive map for gameday in Knoxville." />
-  <link rel="icon" href="assets/img/tn-badge.svg" />
-  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30" />
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Map • Tennessee Gameday Hub</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <script defer src="assets/js/app.js"></script>
 </head>
-<body class="page page-map">
-
+<body class="page map-page">
   <header class="site-header">
-    <div class="wrap">
-      <a class="brand" href="index.html" aria-label="Tennessee home">
-        <span class="brand-badge">TN</span><span class="brand-wordmark">Tennessee</span>
-      </a>
-      <nav class="top-nav" aria-label="Primary">
-        <a href="schedule.html">Schedule</a>
-        <a href="specials.html">Specials</a>
-        <a class="active" href="map.html">Map</a>
-        <a href="guide.html">Guide</a>
-      </nav>
-      <div id="countdown" class="countdown-header" aria-live="polite">
-        <div class="pill"><b id="cd-days">00</b><span>days</span></div>
-        <div class="pill"><b id="cd-hrs">00</b><span>hrs</span></div>
-        <div class="pill"><b id="cd-min">00</b><span>mins</span></div>
-        <div class="pill"><b id="cd-sec">00</b><span>secs</span></div>
+    <div class="bar container">
+      <a class="brand" href="index.html"><span class="logo">TN</span><span>Tennessee</span></a>
+      <div id="countdown">
+        <div class="cd-badge"><span id="cd-days">00</span><span class="cd-label">days</span></div>
+        <div class="cd-badge"><span id="cd-hrs">00</span><span class="cd-label">hrs</span></div>
+        <div class="cd-badge"><span id="cd-min">00</span><span class="cd-label">mins</span></div>
+        <div class="cd-badge"><span id="cd-sec">00</span><span class="cd-label">secs</span></div>
       </div>
-      <a class="btn btn-small btn-accent" href="submit.html">Submit</a>
+      <nav class="site-nav">
+        <a href="schedule.html">Schedule</a><a href="specials.html">Specials</a><a href="map.html">Map</a><a href="guide.html">Guide</a>
+        <a class="btn" href="submit.html">Submit</a>
+      </nav>
     </div>
   </header>
 
-  <main class="wrap main-grid">
-    <div class="grid grid-rail">
-      <div class="col-main flow">
-        <section class="card">
-          <header class="card-header"><h1 class="h3">Interactive map</h1></header>
-          <div class="card-body">
-            <div class="embed-frame ratio-16x9">
-              <iframe title="OpenStreetMap campus"
-                src="https://www.openstreetmap.org/export/embed.html?bbox=-83.950%2C35.940%2C-83.905%2C35.970&layer=mapnik&marker=35.955%2C-83.925"
-                loading="lazy"></iframe>
-            </div>
-            <p class="mt-2">
-              <a target="_blank" rel="noopener" href="https://www.openstreetmap.org/#map=14/35.955/-83.925">Open full map</a>
-            </p>
-          </div>
-        </section>
-      </div>
-
-      <aside class="col-rail flow">
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Quick links</h2></header>
-          <ul class="card-list">
-            <li><a href="guide.html">Guide</a></li>
-            <li><a href="specials.html">Specials</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-            <li><a href="submit.html">Submit a listing</a></li>
-          </ul>
-        </section>
-
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Live traffic (Waze)</h2></header>
-          <div class="embed-frame">
-            <iframe title="Waze live map"
-              src="https://embed.waze.com/iframe?zoom=14&lat=35.9549&lon=-83.9250&pin=1"
-              loading="lazy"></iframe>
-          </div>
-        </section>
-      </aside>
+  <main class="container rail-layout">
+    <div class="content stack">
+      <section class="card">
+        <h2>Interactive map</h2>
+        <iframe class="embed map" src="https://www.openstreetmap.org/export/embed.html?bbox=-84.05%2C35.86%2C-83.80%2C36.02&layer=mapnik&marker=35.955%2C-83.925"></iframe>
+        <p><a class="meta" href="https://www.openstreetmap.org/?mlat=35.955&mlon=-83.925#map=13/35.955/-83.925" target="_blank" rel="noopener">Open full map</a></p>
+      </section>
     </div>
+    <aside class="rail stack">
+      <section class="card">
+        <h3>Quick links</h3>
+        <ul class="meta" style="margin:0; padding-left:1rem">
+          <li><a href="guide.html">Guide</a></li>
+          <li><a href="specials.html">Specials</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+        </ul>
+      </section>
+      <section class="card">
+        <h3>Live traffic (Waze)</h3>
+        <iframe class="embed map" src="https://embed.waze.com/iframe?lat=35.9545&lon=-83.9250&zoom=14&pin=1"></iframe>
+      </section>
+    </aside>
   </main>
 
-  <footer class="site-footer">
-    <div class="wrap">
-      <p class="muted">Unofficial fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
-      <nav class="foot-nav">
-        <a href="guide.html">Guide</a> · <a href="specials.html">Specials</a> · <a href="map.html">Map</a> · <a href="schedule.html">Schedule</a> · <a href="submit.html">Submit</a>
-      </nav>
-    </div>
-  </footer>
-
-  <script src="assets/js/app.js?v=2025-08-30"></script>
-  <script src="assets/js/live.js?v=2025-08-30"></script>
+  <footer class="site-footer"><div class="container"><p class="meta">Unofficial fan resource.</p></div></footer>
 </body>
 </html>
