--- a/submit.html
+++ b/submit.html
@@ -1,91 +1,47 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Submit a Listing</title>
-  <meta name="description" content="Share a restaurant/bar special, event, or tip with fans." />
-  <link rel="icon" href="assets/img/tn-badge.svg" />
-  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30" />
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Submit • Tennessee Gameday Hub</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-<body class="page page-submit">
-
+<body class="page submit-page">
   <header class="site-header">
-    <div class="wrap">
-      <a class="brand" href="index.html" aria-label="Tennessee home">
-        <span class="brand-badge">TN</span><span class="brand-wordmark">Tennessee</span>
-      </a>
-      <nav class="top-nav" aria-label="Primary">
-        <a href="schedule.html">Schedule</a>
-        <a href="specials.html">Specials</a>
-        <a href="map.html">Map</a>
-        <a href="guide.html">Guide</a>
-      </nav>
-      <div id="countdown" class="countdown-header" aria-live="polite">
-        <div class="pill"><b id="cd-days">00</b><span>days</span></div>
-        <div class="pill"><b id="cd-hrs">00</b><span>hrs</span></div>
-        <div class="pill"><b id="cd-min">00</b><span>mins</span></div>
-        <div class="pill"><b id="cd-sec">00</b><span>secs</span></div>
+    <div class="bar container">
+      <a class="brand" href="index.html"><span class="logo">TN</span><span>Tennessee</span></a>
+      <div id="countdown">
+        <div class="cd-badge"><span id="cd-days">00</span><span class="cd-label">days</span></div>
+        <div class="cd-badge"><span id="cd-hrs">00</span><span class="cd-label">hrs</span></div>
+        <div class="cd-badge"><span id="cd-min">00</span><span class="cd-label">mins</span></div>
+        <div class="cd-badge"><span id="cd-sec">00</span><span class="cd-label">secs</span></div>
       </div>
-      <a class="btn btn-small btn-accent" href="submit.html" aria-current="page">Submit</a>
+      <nav class="site-nav">
+        <a href="schedule.html">Schedule</a><a href="specials.html">Specials</a><a href="map.html">Map</a><a href="guide.html">Guide</a>
+        <a class="btn" href="submit.html">Submit</a>
+      </nav>
     </div>
   </header>
 
-  <main class="wrap main-grid">
-    <div class="grid grid-rail">
-      <div class="col-main flow">
-        <section class="card">
-          <header class="card-header"><h1 class="h3">Submit a listing</h1></header>
-          <div class="card-body flow">
-            <p>Send us your game-week special, event, parking tip, or service that helps fans.</p>
-            <form class="stack-md" action="https://formspree.io/f/your-id" method="POST">
-              <div class="grid grid-2">
-                <label class="form-field">Name<input required name="name" type="text" /></label>
-                <label class="form-field">Email<input required name="email" type="email" /></label>
-              </div>
-              <label class="form-field">Listing title<input required name="title" type="text" /></label>
-              <label class="form-field">Details<textarea required name="details" rows="6"></textarea></label>
-              <div class="grid grid-2">
-                <label class="form-field">Category
-                  <select name="category">
-                    <option>Food/Drink special</option>
-                    <option>Event</option>
-                    <option>Parking/Travel</option>
-                    <option>Service</option>
-                  </select>
-                </label>
-                <label class="form-field">Website or link<input name="url" type="url" placeholder="https://…" /></label>
-              </div>
-              <button class="btn btn-accent" type="submit">Send</button>
-            </form>
-          </div>
-        </section>
-      </div>
-
-      <aside class="col-rail flow">
-        <section class="card">
-          <header class="card-header"><h2 class="h5">Quick links</h2></header>
-          <ul class="card-list">
-            <li><a href="guide.html">Guide</a></li>
-            <li><a href="specials.html">Specials</a></li>
-            <li><a href="map.html">Map</a></li>
-            <li><a href="schedule.html">Schedule</a></li>
-          </ul>
-        </section>
-      </aside>
+  <main class="container rail-layout">
+    <div class="content stack">
+      <section class="card">
+        <h2>Submit a listing</h2>
+        <p class="meta">Send your restaurant/bar/shop gameday special or event link.</p>
+        <form action="https://forms.gle" method="get" class="stack">
+          <input aria-label="Your link" name="q" class="card" style="padding:12px" placeholder="Paste your link…" />
+          <button class="btn">Submit</button>
+        </form>
+      </section>
     </div>
+    <aside class="rail stack">
+      <section class="card"><h3>Quick links</h3>
+        <ul class="meta" style="margin:0; padding-left:1rem">
+          <li><a href="guide.html">Guide</a></li><li><a href="map.html">Map</a></li><li><a href="schedule.html">Schedule</a></li>
+        </ul>
+      </section>
+    </aside>
   </main>
 
-  <footer class="site-footer">
-    <div class="wrap">
-      <p class="muted">Unofficial fan resource. Not affiliated with any university, athletics program, conference, or governing body.</p>
-      <nav class="foot-nav">
-        <a href="guide.html">Guide</a> · <a href="specials.html">Specials</a> · <a href="map.html">Map</a> · <a href="schedule.html">Schedule</a> · <a href="submit.html">Submit</a>
-      </nav>
-    </div>
-  </footer>
-
-  <script src="assets/js/app.js?v=2025-08-30"></script>
-  <script src="assets/js/live.js?v=2025-08-30"></script>
+  <footer class="site-footer"><div class="container"><p class="meta">Unofficial fan resource.</p></div></footer>
 </body>
 </html>
